Fixed subheading scaling on small screens.

--- a/css/resume.css
+++ b/css/resume.css
@@ -49,6 +49,7 @@ h1 {
 @media (max-width: 600px) {
   h1 {
     font-size: 3rem;
+    line-height: 3rem;
   }
 }
 
@@ -73,8 +74,10 @@ p.lead {
   font-size: 1.5rem;
 }
 
-.subheading .small {
-  font-size: 1rem;
+@media (max-width: 600px) {
+  .subheading {
+    font-size: 1.2rem;
+  }
 }
 
 .social-icons a {
