--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -46,6 +46,7 @@ h1 {
 
   @media (max-width: 600px) {
     font-size: 3rem;
+    line-height: 3rem;
   }
 }
 
@@ -69,8 +70,8 @@ p.lead {
   @include heading-font;
   font-size: 1.5rem;
 
-  .small {
-    font-size: 1rem;
+  @media (max-width: 600px) {
+    font-size: 1.2rem;
   }
 }
 
